# git-internal

./: .gitignore  .libraignore  AGENTS.md  BUCK  CLAUDE.md  Cargo.toml  README.md  buckal.snap
.claude/: settings.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: pre-task.md  r2cn.md
.github/workflows/: base.yml  claude-review.yml  codeql.yml  publish.yml
Examples/: create_tree.rs  decode_pack.rs  encode_pack.rs  hashing.rs  http_server.rs  ssh_server.rs
docs/: ARCHITECTURE.md  Analytical Report on SHA-256 Hash Computation.md  ENCODE_PARALLEL.md  GIT_OBJECTS.md  GIT_PROTOCOL_GUIDE.md  PROTOCOL_ABSTRACTION.md  RABIN_DELTA_OPTIMIZATION_REPORT.md  agent-workflow.md  agent.md  ai.md
examples/: bench_threads_compare.sh  decode_bench.rs  git_pack_objects_bench.sh  grading_bot_encode_pack_bench.rs  hashing.rs  http_server.rs  pack_stats.rs  ssh_server.rs
gitc/: delta.h  diff-delta.c  pack-objects.c  pack-write.c
src/: config.rs  diff.rs  errors.rs  hash.rs  lib.rs  utils.rs
src/ai_process/: base.rs  checksum.rs  objects.rs
src/delta/: errors.rs  mod.rs  utils.rs
src/delta/decode/: mod.rs
src/delta/encode/: mod.rs  rabin.rs
src/delta/encode/rabin/: extend_match.rs  mod.rs  tables.rs
src/internal/: index.rs  mod.rs
src/internal/metadata/: entry_meta.rs  mod.rs
src/internal/object/: ai_context.rs  ai_decision.rs  ai_evidence.rs  ai_header.rs  ai_patchset.rs  ai_plan.rs  ai_provenance.rs  ai_run.rs  ai_task.rs  ai_tool.rs  blob.rs  commit.rs  context.rs  context_frame.rs  decision.rs  evidence.rs  header.rs  intent.rs  intent_event.rs  mod.rs  note.rs  patchset.rs  pipeline.rs  plan.rs  provenance.rs  run.rs  signature.rs  tag.rs  task.rs  tool.rs  tree.rs  types.rs  utils.rs
src/internal/object/ai_process/: base.rs  checksum.rs  mod.rs  objects.rs
src/internal/pack/: cache.rs  cache_object.rs  decode.rs  encode.rs  entry.rs  index_entry.rs  mod.rs  pack_index.rs  profile.rs  stats.rs  test_pack_download.rs  utils.rs  waitlist.rs  wrapper.rs
src/internal/pack/encode/: delta_search.rs  header.rs  mod.rs  output.rs  parallel.rs  sort.rs  tests.rs
src/internal/zlib/stream/: inflate.rs
src/protocol/: core.rs  http.rs  mod.rs  pack.rs  smart.rs  ssh.rs  types.rs  utils.rs
src/zstdelta/: mod.rs  zstdelta.rs
tests/: decode-index-pack.rs  pack-stats.rs
tests/common/: mod.rs
tests/data/packs/: .gitignore  git-large-sha256-f6455f09d816f54d115724975da6e7edfb100d746ad145bfd0d2ddc0e0261f5d.pack  mini-test.pack  pack-78047853c60a1a3bb587f59598bdeb773fefc821f6f60f4f4797644ad43dad3d.pack  pack-delta-sha256-3662654057d1adedf50f2a80bfdec752e00ac72798859d850ab1dcfd801beedd.pack  ref-delta-0e26651d43b149c9baef6035c19cca140f82bb0d0cc5b12fda0ae89ff6a25195.pack  sha1_delta_84ab8b4e9d42f4567463575c598198458f1dbe3e.pack  sha1_small_6e34dc09a1725167aa5af943a208018d29db3335.pack  sha256_delta_cf65537eaf062245e49f5042e1f5e830ca7f70a642aa74cf21fed93e318eb4dd.pack  sha256_small_2f6bd516e9640e5c124e8ddb78a985047e02d69b4121ea1ccece01081a4e36fa.pack
tests/diff/: new.txt
toolchains/: BUCK
