[package]
name = "git-internal"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Git-Internal is a high-performance Rust library for encoding and decoding Git internal objects and Pack files."
exclude = ["tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.12.1"
hex = "0.4.3"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
sha1 = "0.10.6"
colored = "3.0.0"
threadpool = "1.8.1"
num_cpus = "1.17.0"
dashmap = "6.1.0"
lru-mem = "0.3.0"
byteorder = "1.5.0"
futures-util = "0.3.31"
bytes = "1.11.0"
memchr = "2.7.6"
encoding_rs = "0.8.35"
rayon = "1.11.0"
ahash = "0.8.12"
diffs = "0.5.1"
libc = "0.2.178"
zstd-sys = { version = "2.0.16+zstd.1.5.7", features = ["experimental"] }
sea-orm = { version = "1.1.17", features = ["sqlx-sqlite"] }
flate2 = { version = "1.1.5", features = ["zlib"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4"] }
tokio = { version = "1.48.0", features = ["fs"] }
bincode = { version = "2.0.1", features = ["serde"] }
axum = { version = "0.8.7", features = ["macros", "json"] }
async-trait = "0.1.89"
futures = "0.3.31"
tokio-stream = "0.1.17"
natord = "1.0.9"
tempfile = "3.23.0"
path-absolutize = "3.1.1"
similar = "2.7.0"
sha2 = "0.10.9"


[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
quickcheck = "1.0.3"
rand = "0.9.2"
rand_chacha = "0.9.0"


[features]
default = ["diff_mydrs"]
diff_mydrs = []
